--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: kaiburr CI/CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push-image:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,17 +22,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package
 
-  docker:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
       - name: Set Up Docker
         run: |
+          sudo apt-get update
           sudo apt-get install docker.io
           sudo service docker start
 
@@ -40,6 +32,9 @@ jobs:
         run: docker build -t arunodhai/kaiburrtask4 .
 
       - name: Push Docker Image to Docker Hub
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
           docker push arunodhai/kaiburrtask4
