--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,14 +38,11 @@ jobs:
           sudo service docker start
 
       - name: Login to Docker Hub
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: >
-          echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USER}" --password-stdin
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag arunodhai/kaiburrtask4:latest
+        run: docker build -t arunodhai/kaiburrtask4:latest .
 
       - name: Docker Push
         run: docker push arunodhai/kaiburrtask4
