--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  code-build:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +22,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package
 
-  docker-build:
+  docker:
     runs-on: ubuntu-latest
 
     needs: build
